--- a/ios/ExternalApps/Info.plist
+++ b/ios/ExternalApps/Info.plist
@@ -47,5 +47,23 @@
     </array>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSCameraUsageDescription</key>
+    <string>MHEWS needs access to your Camera for Scan QR.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>MHEWS need access to your location even when the app is in the background.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>MHEWS need access to your location even when the app is in the background.</string>
+    <key>NSLocationAccuracyUsageDescription</key>
+    <string>MHEWS needs access to your Location</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>MHEWS need access to your location even when the app is in the background.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>MHEWS needs access to your Gallery.</string>
+    <key>NSNotificationsUsageDescription</key>
+    <string>MHEWS needs access Notifications</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>MHEWS needs access Apple Music</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>MHEWS needs access Microphone</string>
   </dict>
 </plist>
